@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 04-08-2005 fixed: when ftp server was stopped (ie reboot, restartapp...), clients were not disconnected
  - 04-08-2005 fixed: audio was 5 ms later using normal audio output and 10 ms with passthrough
  - 04-08-2005 fixed: rar url support. failed to play dvd images in .rar using mplayer.
  - 04-08-2005 changed: .iso files are now treated as dvd image files just as .img was. (if you want to force old behaviour rename file to .mpg)
